Fixed overflow image issues

--- a/_src/scss/partials/_home.scss
+++ b/_src/scss/partials/_home.scss
@@ -383,6 +383,12 @@
 			position: absolute;
 			left: 10px;
 		}
+
+		&.no-bottom{
+			.overflow_image{
+				margin-top: -40px;
+			}
+		}
 	}
 
 	@media screen and (min-width: 64em){
